# W2Attn

./: .gitignore  README.md  README_EN.md  entailment_results.txt  micro_results.txt  pyproject.toml  test_cuda.py
.github/workflows/: lean_action_ci.yml
benches/: bench_compare.py  bench_fairness.py  bench_pe.py  common.py  hierarchy.py  run_benchmarks.py
proof/: Main.lean  Proof.lean  build_error.txt  build_error_2.txt  build_error_manual_2.txt  lake-manifest.json  lakefile.toml
proof/Proof/: ALiBi.lean  Basic.lean  Degeneracy.lean  DiagCov.lean  Metric.lean  RoPE.lean
src/w2attn/: __init__.py
tests/: test_components.py  verify.py
w2_rope/: __init__.py  attention.py  block.py  ffn.py
w2attn/: attention.py  block.py  config.py  model.py  rope.py
